Bug 204732 - "Configure Kate" help button does nothing
Summary: "Configure Kate" help button does nothing
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (show other bugs)
Version: unspecified
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-22 06:31 UTC by David Rankin
Modified: 2009-09-17 00:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Rankin 2009-08-22 06:31:59 UTC
Version:            (using KDE 4.3.0)
Installed from:    SuSE RPMs

The title pretty much says it all,

When in "Configure Kate", for example on the Plugins -> File Selector window, pressing the "Help" button does nothing. No errors, just -- nothing.

Accessing the kate handbook in konqueror with "help:/kate" brings up the handbook just fine. This is on openSuSE 11.0 with:

Kate
Version 3.3.0
Using KDE 4.3.00 (KDE 4.3.0) "release 155"
Comment 1 Andreas Pakulat 2009-08-22 11:28:51 UTC
Yeap, seems like Kate requests the Help button, but doesn't connect any slots to open the help then.
Comment 2 Dotan Cohen 2009-09-02 15:05:26 UTC
I can confirm this issue in KDE 4.3.1. To reproduce: Settings -> Configure Kate -> Help. Nothing happens when the button is pushed.
Comment 3 Pascal Létourneau 2009-09-17 00:23:37 UTC
SVN commit 1024609 by pletourn:

Set up Help

BUG:204732


 M  +1 -0      kdelibs/kate/utils/kateglobal.cpp  
 M  +1 -0      kdesdk/kate/app/kateconfigdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1024609