Set up Help

BUG:204732

svn path=/trunk/KDE/kdesdk/kate/; revision=1024609